<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Müll Guide MS</string>
    <string name="hello_world">Hello world!</string>
    <string name="testeingabeaufforderung">Bitte was eingeben....</string>
    <string name="speichern">Speichern</string>
    <string name="testausgabe">Liste der gespeicherten Einträge</string>
    <string name="testaktualisieren">Liste aktualisieren</string>
    <string name="title_activity_parse_test">ParseTestActivity</string>
    <string name="testparse">PARSE Test</string>
    <string name="testmaps">Maps Test</string>
    <string name="title_activity_maps_">Maps Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="muelltrennung">Mülltrennung</string>
    <string name="entsorgung">Entsorgung</string>
    <string name="feedback">Feedback</string>
    <string name="ueberUns">Über uns</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="hilfe">Hilfe</string>
    <string name="title_activity_entsorgung_standorte">EntsorgungStandorteActivity</string>
    <string name="aufKarteAnzeigen">Auf Karte anzeigen</string>
    <!-- Strings, die mit db_[tabelle]_value_ beginnen stehen für Strings, die Werten einer Datenbanktabelle entsprechen -->
    <string name="db_entsorgungsart_value_altglas">Altglas</string>
    <string name="db_entsorgungsart_value_altkleider">Altkleider</string>
    <string name="db_entsorgungsart_value_recyclinghof">Recyclinghof</string>
    <string name="db_entsorgungsart_value_elektrokleingeraete">Elektrokleingeräte</string>
    <string name="db_entsorgungsart_value_biotonne">Biotonne</string>
    <string name="db_entsorgungsart_value_restmuell">Restmüll</string>
    <string name="db_entsorgungsart_value_gelber_sack">Gelber Sack</string>
    <string name="db_entsorgungsart_value_papiermuell">Papiermüll</string>
    <string name="title_activity_standort_details">StandortDetailsActivity</string>
    <string name="tvAdresseLabel">Adresse</string>
    <string name="tvOeffnungszeitenLabel">Öffnungszeiten</string>
    <string name="tvHinweisLabel">Hinweise</string>
    <string name="FeedbackSubjectLabel">Bitte wählen Sie einen Betreff:</string>
    <string name="FeedbackMessageLabel">Ihre Nachricht an uns:</string>
    <string name="senden">Senden</string>
    <string name="standortMitteilen">Standort mitteilen</string>
    <string name="keinenStandortGefunden">Es tut uns Leid, ihr Standort konnte nicht ermittelt werden.</string>

    <string-array name="feedback_betreffoptionen">
        <item>Entsorgungsstandort melden</item>
        <item>Container defekt</item>
        <item>Mülltrennung - Gegenstand melden</item>
        <item>Sonstiges</item>
    </string-array>

    <string name="zurueck">Zurück</string>
    <string name="dialogStandortFeedback">Dieser Standort verfügt über keine genaue Ortsangabe und kann deshalb nicht auf der Karte angezeigt werden.\nUnter Feedback können Sie uns den genauen Standort mitteilen.</string>
    <string name="fehler_beim_laden">Beim Laden der Daten ist ein Fehler aufgetreten. Bitte vergewissern Sie sich, dass Sie über eine bestehende Netzwerkverbindung verfügen und versuchen Sie es erneut!</string>
    <string name="gps_gpsEinschalten">Schalten Sie für genauere Standortangaben bitte das GPS ein.</string>
    <string name="gps_lokalisierungPerNetzwerk">Aktivieren Sie für genauere Standortangaben die Lokalisierung über das Netzwerk.</string>
    <string name="gps_keineDiensteAktiviert">Es sind keine Standorte-Dienste aktiviert.</string>
    <string name="gps_einstellungenAendern">Einstellungen anpassen</string>
    <string name="help_AltglasAllgemein">Kennzeichnung für einen Altglas-Container. Hinweis: Unterliegen Öffnungszeiten.</string>
    <string name="help_Altkleider">Kennzeichnung für Altkleider. Diese Container sind rund um die Uhr geöffnet.</string>
    <string name="help_Biotonne">Kennzeichnung für braune Biotonnen</string>
    <string name="help_Papiertonne">Kennzeichnung für blaue Papiertonnen.</string>
    <string name="help_Restmuell">Kennzeichnung für graue Restmüll-Tonnen.</string>
    <string name="help_StandortFehlt">Für einen so gekennzeichneten Standort fehlen genaue Ortsangaben.</string>
    <string name="help_GraueSymbole">Graue Symbole</string>
    <string name="help_Elektrokleingeräte">Container für Elektrokleingeräte. Hinweis: Unterliegen Öffnungszeiten. Die maximale Objektgröße beträgt 60*28 cm.</string>
    <string name="help_GelbeTonne">Kennzeichnung für die gelbe Tonne bzw. den gelben Sack.</string>
    <string name="help_Recyclinghof">Standorte von Recyclinghöfen. Dort kann fast alles entsorgt werden! Hinweis: Öffnungszeiten beachten!</string>
	<string name="info_werWirSind">Wer wir sind</string>
	<string name="info_wirSind">Wir sind Marlen, Ruslan und Lena. Zusammen bilden wir das Team von Müll Guide MS!\n</string>
	<string name="info_warumDieseApp">Wieso gibt es diese App?</string>
	<string name="info_appBegruendung">Wir alle belegen den Masterstudiengang Wirtschaftsinformatik an der FH Münster. Diese App entstand im Rahmen des Moduls "Mobile Engineering".\n</string>
	<string name="info_woherKommenDieDaten">Woher stammen all die Informationen?</string>
	<string name="info_herkunftDaten">Die Daten stammen von der Webseite der awm Münster, die örtlich zuständige Entsorgungsgesellschaft.\n</string>
	<string name="info_Copyright">Das Copyright an dieser App haben Marlen Rotert, Ruslan Widemann und Lena Rother</string>
	<string name="info_Kontakt">Kontaktieren können Sie uns unter: info.muellguidems@gmail.com \n</string>
	<string name="info_Email">info.muellguidems@gmail.com</string>
	<string name="info_Version">Version 1.0</string>
	<string name="konakt">Kontakt</string>
	<string name="alert_Flugmodus">Ihr Gerät befindet sich im Flugmodus. Möchten Sie zu den Einstellungen wechseln?</string>
	<string name="alert_Netzwerk">Keine Netzwerkverbindung vorhanden</string>
	<string name="alert_NetzwerkLangsam">Achtung, Ihre Netzwerkverbindung ist sehr langsam. Das Laden kann jetzt länger dauern.</string>
	<string name="alert_StandortNichtBestimmbar">Ihr Standort konnte nicht bestimmt werden. Möchten Sie dies ändern?</string>
	<string name="alert_FlugmodusChange">Ändern</string>
</resources>