<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="15dip"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dip"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="15dip"
            android:text="@string/info_Version"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvWerWirSind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_werWirSind"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvWirSind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_wirSind"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvWarumDieseApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_warumDieseApp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvAppBegruendung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_appBegruendung"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvWoherStammenDaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_woherKommenDieDaten"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvDatenHerkunft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_herkunftDaten"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvKontaktHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konakt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvKontakt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_Kontakt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_Copyright"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>